<resources>
    <string name="app_name">Mindspace</string>
    <string name="app_version">Version 1.0</string>
    <string name="registrarme"><u>Registrarme</u></string>
    <string name="regresar"><u>Ya tengo cuenta</u></string>

    <!-- STRING LOGIN ACTIVITY-->
    <string name="Login_tvTitle">Mindspace</string>
    <string name="Login_tvSubTitle">Bienvendio</string>
    <string name="Login_tvIniciarSesion">INICIAR SESIÓN</string>
    <string name="Login_tvEmail">Correo Electrónico</string>
    <string name="Login_tvPassword">Contraseña</string>
    <string name="Login_btnLogin">Iniciar Sesión</string>
    <string name="Login_btnRegister">Registrarme</string>

    <!--STRING REGISTER ACTIVITY-->
    <string name="Register_tvTittle">Unete a MindSpace</string>
    <string name="Register_et_hint_nombre">Nombre</string>
    <string name="Register_et_hint_apellido">Apellido</string>
    <string name="Register_et_hint_edad">Edad</string>
    <string name="Register_et_hint_email">Correo Electrónico</string>
    <string name="Register_et_hint_password">Contraseña</string>
    <string name="Register_btnRegister">Registrarse</string>
    <string name="Register_btnBackLogin">Ya tengo cuenta</string>

    <!--STRING HOME ACTIVITY-->
    <string name="Home_NameApp">MindSpace</string>
    <string name="Home_SaludaUsuario">Hola</string>
    <string name="Home_Usuario">Nombre Apellido</string>
    <string name="Btn_Actividades">Actividades</string>
    <string name="Btn_Estadisticas">Estadisticas</string>
    <string name="Home_Mensaje">Mensajes del dia</string>
    <string name="Home_TextoMensaje">Aqui va el texto</string>
    <string name="Home_TextoCategorias">Categorias</string>
    <string name="Home_btnDiario">Diario</string>
    <string name="Home_btnRelajarse">Relajarse</string>
    <string name="Home_btnMusica">Musica</string>

    <!--STRING DIARIO ACTIVITY-->
    <string name="Diario_NameApp">MindSpace</string>
    <string name="Diario_btnNuevaNota">Nueva Nota</string>
    <string name="Diario_Notas">Todas las Notas</string>
    <string name="Diario_Lectura">Modo Lectura</string>

    <!--STRING RELAJACION ACTIVITY-->
    <string name="Relajacion_Subtitulo">Actividades de Relajación</string>
    <string name="btn_guias">Guias de meditación</string>
    <string name="btn_conciliar">Conciliar el sueño</string>
    <string name="btn_respiracion">Respiración profunda</string>
    <string name="btn_juegos">Juegos relajantes</string>
    <string name="btn_colorear">Colorear Mandalas</string>
    <string name="btn_ejercicios">Ejercicios de Mindfulness</string>
    <string name="btn_visualizacion">Visualización guiada</string>

    <!--STRING CREAR NOTA ACTIVITY-->
    <string name="crear_texto">Crear Nota</string>
    <string name="crear_titulo">Título</string>
    <string name="crear_desc">Descripción</string>
    <string name="btn_guardar">Guardar</string>

    <!--STRING EDITAR PERFIL ACTIVITY-->
    <string name="Editar_titulo">Editar Perfil</string>

    <!--STRING ACTIVITY RELAJACION PROFUNDA-->
    <string name="Nombre_actividad">Relajación Profunda</string>
    <string name="Nombre_App">MindSpace</string>
    <string name="TextoTitulo">TextoTitulo</string>
    <string name="DescAct">Descripcion</string>





</resources>