<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".usecases.registrarse.Registrarse">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!--- Fondo de pantalla -->
        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/wregistrar"
            android:alpha="0.75"
            android:scaleType="centerCrop" />

        <!--- LOGO -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="53dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="600dp"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_black"
                android:textColor="#6FC4F4"
                android:textSize="35dp"
                android:layout_marginLeft="110dp"
                android:text="@string/Register_tvTittle" />

            <EditText
                android:id="@+id/etNOmbre"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:textColorHighlight="#6FC4F4"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/Register_et_hint_nombre"
                android:singleLine="true"
                android:maxLength="25"
                android:textSize="17sp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:textColorHighlight="#6FC4F4"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/Register_et_hint_apellido"
                android:singleLine="true"
                android:maxLength="25"
                android:textSize="17sp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:textColorHighlight="#6FC4F4"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/Register_et_hint_edad"
                android:singleLine="true"
                android:maxLength="25"
                android:textSize="17sp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/etEmai"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:textColorHighlight="#6FC4F4"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/Register_et_hint_email"
                android:singleLine="true"
                android:maxLength="25"
                android:textSize="17sp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:textColorHighlight="#6FC4F4"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/Register_et_hint_password"
                android:singleLine="true"
                android:maxLength="25"
                android:textSize="17sp"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/buttonRegistrarme"
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#6FC4F4"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/Register_btnRegister"
                android:textColor="#FFFDFD"
                android:textSize="15sp"
               />

            <Button
                android:id="@+id/buttonReturnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#00FFFFFF"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/Register_btnBackLogin"
                android:textColor="#6FC4F4"
                android:textSize="15sp"
                />

        </LinearLayout>


    </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>